﻿[B]Version 0.2.2[/B]
- Added option to change ftp directory structure.

[B]Version 0.2.1[/B]
- Added option to change list sort order.

[B]Version 0.2.0[/B]
- Added file FTP upload.

[B]Version 0.1.0[/B]
- Added runtime.
- Added Video Res.
- Added MPAA.
- Added Search box.
- Code cleanup.
- HTML updates.
- Added Screenshot.

[B]Version 0.0.1[/B]
- initial beta.